// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extensions [production] bud.extensions.repository matches snapshot 1`] = `
Object {
  "@roots/bud-babel": Controller {
    "_app": [Function],
    "_module": Object {
      "mixin": [Function],
      "name": "@roots/bud-babel",
      "options": undefined,
      "register": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-entrypoints": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "@roots/bud-entrypoints",
      "options": undefined,
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-postcss": Controller {
    "_app": [Function],
    "_module": Object {
      "mixin": [Function],
      "name": "@roots/bud-postcss",
      "options": undefined,
      "register": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-preset-recommend": Controller {
    "_app": [Function],
    "_module": Object {
      "name": "@roots/bud-preset-recommend",
      "options": undefined,
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "clean-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "clean-webpack-plugin",
      "options": Object {
        "cleanOnceBeforeBuildPatterns": Array [
          "**/*",
          "!dll",
        ],
        "cleanStaleWebpackAssets": true,
        "protectWebpackAssets": true,
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "copy-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "copy-webpack-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "eslint-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "mixin": [Function],
      "name": "eslint-webpack-plugin",
      "options": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": false,
    },
  },
  "mini-css-extract-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "mini-css-extract-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-define-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-define-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-hot-module-replacement-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-hot-module-replacement-plugin",
      "options": undefined,
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-manifest-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-manifest-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-provide-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-provide-plugin",
      "options": undefined,
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 2`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 3`] = `
Container {
  "ident": "container",
  "repository": Object {
    "cleanOnceBeforeBuildPatterns": Array [
      "**/*",
      "!dll",
    ],
    "cleanStaleWebpackAssets": true,
    "protectWebpackAssets": true,
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 4`] = `
Container {
  "ident": "container",
  "repository": Object {
    "patterns": Array [],
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 5`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 6`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 7`] = `
Container {
  "ident": "container",
  "repository": Object {
    "fileName": "manifest.json",
    "writeToFileEmit": true,
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 8`] = `
Container {
  "ident": "container",
  "repository": Object {
    "chunkFilename": "[name].css",
    "filename": "[name].css",
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 9`] = `
Container {
  "ident": "container",
  "repository": Object {
    "baseConfig": Object {
      "env": Object {
        "amd": true,
        "browser": true,
        "es6": true,
        "node": true,
      },
      "extends": Array [
        "eslint:recommended",
      ],
      "parser": "@babel/eslint-parser",
      "parserOptions": Object {
        "ecmaFeatures": Object {
          "experimentalObjectRestSpread": true,
          "generators": false,
          "globalReturn": true,
          "impliedStrict": true,
          "objectLiteralDuplicateProperties": false,
        },
        "requireConfigFile": false,
      },
      "plugins": Array [
        "import",
      ],
      "rules": Object {
        "comma-dangle": Array [
          "error",
          Object {
            "arrays": "always-multiline",
            "exports": "always-multiline",
            "functions": "ignore",
            "imports": "always-multiline",
            "objects": "always-multiline",
          },
        ],
        "no-console": 0,
      },
      "settings": Object {
        "import/core-modules": Array [],
        "import/ignore": Array [
          "node_modules",
          "\\\\.(coffee|scss|css|less|hbs|svg|json)$",
        ],
      },
    },
    "cache": true,
    "cacheLocation": "/Users/kellymears/code/roots/dev/bud/tests/util/project/.budfiles/cache/eslint.json",
    "context": "/Users/kellymears/code/roots/dev/bud/tests/util/project/src",
    "cwd": "/Users/kellymears/code/roots/dev/bud/tests/util/project",
    "extensions": Array [
      "js",
      "jsx",
      "ts",
      "tsx",
      "vue",
    ],
    "failOnError": true,
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 10`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 11`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 12`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 13`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;
